--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-﻿<header class="intro-header " [ngClass]="!user ? 'bg view' : ''">
+﻿<mat-icon >home</mat-icon>
+<app-header></app-header>
+
+<header class="intro-header " [ngClass]="!user ? 'bg view' : ''">
 
 <!-- nav for users-->
 <nav class="navbar navbar-expand navbar-dark bg-dark" >  <!--*ngIf="user"-->
