spacing using bootstrap

--- a/src/app/account/layout.component.html
+++ b/src/app/account/layout.component.html
@@ -6,7 +6,7 @@
         <!--Container-->
         <div class="d-flex justify-content-center">
             <!--Spacing top-->
-            <div class="py-4 my-4">
+            <div class="pt-4 mt-4">
                 <router-outlet></router-outlet>
             </div>
         </div>
