--- a/src/app/account/custom.css
+++ b/src/app/account/custom.css
@@ -6,12 +6,13 @@
     /* The image used */
     background-image: url("../../assets/img/bg6.jpg");
     /* Full height */
-    height: 100%;
+    max-height: 100%;
     /* Center and scale the image nicely */
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
-    
+    background-attachment: fixed;
+
     }
 
 .view {
