--- a/src/app/account/custom.css
+++ b/src/app/account/custom.css
@@ -93,3 +93,25 @@ div.example {
 .padding-top{
     padding-top: 10px;
 }
+
+
+.container {
+    display: flex; /* or inline-flex */
+  }
+
+  .item {
+    flex-grow: 4; /* default 0 */
+  }
+
+  
+mat-sidenav-container, mat-sidenav-content, mat-sidenav {
+    height: 100%;
+}
+
+mat-sidenav {
+    width: 250px;
+}
+
+main {
+    padding: 10px;
+}
