--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -1,19 +1,17 @@
 <mat-toolbar color="primary" class="expanded-toolbar">
   
-  <button mat-button [matMenuTriggerFor]="menu" >
-    <mat-icon>menu</mat-icon>
-  </button>
   
-  <span>
-    <button mat-button routerLink="/">{{title}}</button>
-  </span>
+  
+  <a class='letter' routerLink="/">{{title}}</a>
 
-  <div fxLayout="row" fxShow="false" fxShow.gt-sm></div>
-
-  <mat-menu #menu="matMenu">
-    <button mat-menu-item>Item 1</button>
-    <button mat-menu-item>Item 2</button>
-  </mat-menu>
+  
 
 </mat-toolbar> 
 
+<!--<button mat-button [matMenuTriggerFor]="menu" >
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>Item 1</button>
+    <button mat-menu-item>Item 2</button>
+  </mat-menu>-->
