--- a/src/app/views/footer/footer.component.less
+++ b/src/app/views/footer/footer.component.less
@@ -13,3 +13,10 @@
     width: 100%;
     height: 5rem;            /* Footer height */
 }
+
+.letter {
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+
+}
