--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
                 <a class="nav-item nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
                 <a class="nav-item nav-link" routerLink="/users" routerLinkActive="active">Users</a>
                 <a class="nav-item nav-link" routerLink="/flexing" routerLinkActive="active">Flexing</a>
+                <a class="nav-item nav-link" routerLink="/weather" routerLinkActive="active">Weather</a>
                 <a class="nav-item nav-link" (click)="logout()">Logout</a>
             </div>
         </nav>
