--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -16,6 +16,27 @@
                     <div *ngIf="f.password.errors.required">Password is required</div>
                 </div>
             </div>
+            <!-- <div class="form-group">
+                <label for="firstNameTest">First Name</label>
+                <input type="text" formControlName="firstNameTest" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstNameTest.errors }" />
+                <div *ngIf="submitted && f.firstNameTest.errors" class="invalid-feedback">
+                    <div *ngIf="f.firstNameTest.errors.required">First name is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="lastNameTest">Last Name</label>
+                <input type="text" formControlName="lastNameTest" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastNameTest.errors }" />
+                <div *ngIf="submitted && f.lastNameTest.errors" class="invalid-feedback">
+                    <div *ngIf="f.lastNameTest.errors.required">Last name is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="role">Role</label>
+                <input type="text" formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }" />
+                <div *ngIf="submitted && f.role.errors" class="invalid-feedback">
+                    <div *ngIf="f.role.errors.required">Last name is required</div>
+                </div>
+            </div> -->
             <div class="form-group">
                 <button [disabled]="loading" class="btn btn-primary">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
@@ -24,5 +45,7 @@
                 <a routerLink="../register" class="btn btn-link">Register</a>
             </div>
         </form>
+        <!-- <button (click)="sso()" class="btn btn-primary">SSO</button> -->
+
     </div>
 </div>
